objects/BU_Spend__c.object
<CustomObject>
    <fields>
        <fullName>BU_Product_Key__c</fullName>
        <description>Unique record identifier for individual BU Spend.</description>
        <externalId>true</externalId>
        <label>BU Product Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The Business Unit the product was purchased from.</description>
        <inlineHelpText>The Business Unit the product was purchased from.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>The dealer that the product is related to.</description>
        <inlineHelpText>The dealer that the product is related to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BU Spend</relationshipLabel>
        <relationshipName>BU_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the Product was inactivated at the specified BU</description>
        <inlineHelpText>Date the Product was inactivated at the specified BU</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Reason__c</fullName>
        <description>Reason the product was cancelled.</description>
        <label>End Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not see value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date the product expires.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Dealer__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncomingDealerId__c</fullName>
        <label>IncomingDealerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <description>Date that the product is installed.</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The incoming order number, if applicable.</description>
        <label>Order #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Spend__c</fullName>
        <description>If the Spend is changed, workflow captures the prior value.</description>
        <label>Prior Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>The related product code, if applicable.</description>
        <label>Product Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Dealer_Name__c</fullName>
        <description>Used for data checking on BU feeds.</description>
        <label>Product Dealer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Related product group, if applicable.</description>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The name of the product purchased.</description>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status_Value__c</fullName>
        <description>Set by workflow as the product status is updated.  Active product = 1, Inactive Product = 0.</description>
        <inlineHelpText>Set by workflow as the product status is updated.  Active product = 1, Inactive Product = 0.</inlineHelpText>
        <label>Product Status Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>The status of the product at the BU.</description>
        <inlineHelpText>The status of the product at the BU.</inlineHelpText>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Pre-Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation with Restriction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date the product was purchased.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingDT__c</fullName>
        <description>Captures the datetime that BU Spend data was loaded into this object</description>
        <inlineHelpText>Captures the datetime that BU Spend data was loaded into this object</inlineHelpText>
        <label>ReportingDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVOC_ID__c</fullName>
        <formula>Dealer__r.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>Sales Rep listed on the incoming feed for the product purchased.</description>
        <label>Sales Rep</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <description>The dollar amount of the product purchased.</description>
        <label>Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date Product is active at BU.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X45_day_renewal_notice_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by system workflow.</description>
        <inlineHelpText>Updated by system workflow.</inlineHelpText>
        <label>45 day renewal notice sent</label>
        <type>Checkbox</type>
    </fields>
    <label>BU Spend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Order__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Spend__c</columns>
        <columns>Prior_Spend__c</columns>
        <columns>Product_Status_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Vin_active_spend</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Order__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Status__c</columns>
        <columns>End_Date__c</columns>
        <columns>Spend__c</columns>
        <columns>Prior_Spend__c</columns>
        <columns>Product_Status_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <filters>
            <field>Product_Status__c</field>
            <operation>equals</operation>
            <value>Active,Delivered,Pending Cancellation</value>
        </filters>
        <label>Vin Active Spend</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vAuto_active_spend</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Order__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Status__c</columns>
        <columns>End_Date__c</columns>
        <columns>Spend__c</columns>
        <columns>Prior_Spend__c</columns>
        <columns>Product_Status_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>vAuto</value>
        </filters>
        <filters>
            <field>Product_Status__c</field>
            <operation>equals</operation>
            <value>Active,Delivered,Pending Cancellation</value>
        </filters>
        <label>vAuto Active Spend</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>BU Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>